--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -145,12 +145,16 @@ services:
       kafka:
         condition: service_healthy
     environment:
-      POSTGRES_HOST: postgres
-      POSTGRES_PORT: 5432
-      POSTGRES_DB: confluence_kb
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      KAFKA_BOOTSTRAP_SERVERS: kafka:29092
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_DB: ${POSTGRES_DATABASE}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
+      CONFLUENCE_URL: ${CONFLUENCE_URL}
+      CONFLUENCE_USERNAME: ${CONFLUENCE_USERNAME}
+      CONFLUENCE_API_TOKEN: ${CONFLUENCE_API_TOKEN}
+      CONFLUENCE_VERIFY_SSL: ${CONFLUENCE_VERIFY_SSL}
     volumes:
       - ./:/app
 
